# LilyTerm

./: AUTHORS  COPYING  ChangeLog  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  lilyterm.conf  lilyterm.desktop  lilyterm.rc  lilyterm.xml
debian/: changelog  control  copyright  menu  postinst  prerm  rules
po/: POTFILES.in  de.po  lilyterm.pot  missing  tr.po  zh_CN.po  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  data.h  dialog.c  dialog.h  environ.c  environ.h  main.c  main.h  menu.c  menu.h  notebook.c  notebook.h  pagename.c  pagename.h  profile.c  profile.h  vtefont.c  vtefont.h  window.c  window.h
