etcdir = $(sysconfdir)/xdg
etc_DATA = $(PACKAGE).rc

desktopdir = $(datadir)/applications
desktop_DATA = $(PACKAGE).desktop

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = $(PACKAGE).png $(PACKAGE).xpm

examplesdir = $(datadir)/doc/$(PACKAGE)/examples
examples_DATA = $(PACKAGE).rc

EXTRA_DIST = $(etc_DATA) $(desktop_DATA) $(pixmaps_DATA) $(examples_DATA)
